@@ -44,6 +44,7 @@ Unreleased Version 2.2.2-pre
  * Server Fix: Properly start recordings for sessions instantiated from a template.
  * Fix: Try to retain dock arrangements after resizing the window, the Windows on-screen keyboard squashing the application or rotating a device/monitor. They should no longer remain squished to a smaller size after resizing the window back. Thanks vipperz for reporting.
  * Fix: Work around Android devices reporting way too huge motions when panning with two fingers. Thanks quandaledingle44 for reporting.
+ * Feature: Right-clicking outside of a transform now applies it. Thanks MorrowShore for suggesting.
 
 2024-11-06 Version 2.2.2-beta.4
  * Fix: Solve rendering glitches with selection outlines that happen on some systems. Thanks xxxx for reporting.
